prevent screen from rubberbanding on mobile

--- a/src/scss/app/app.scss
+++ b/src/scss/app/app.scss
@@ -1,7 +1,7 @@
 @import "../cutegarden-variables";
 
 html {
-  overscroll-behavior: contain;
+  overscroll-behavior: none;
 }
 
 #cutegarden-canvas-container {
